# python-project-52

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml  pytest.ini
.github/workflows/: my-check.yml
hexlet-code/: Makefile  pyproject.toml
hexlet-code/task_manager/: settings.py
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
statuses/: forms.py  models.py  views.py
statuses/migrations/: 0001_initial.py
statuses/templates/statuses/: status_confirm_delete.html  status_form.html  status_list.html
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py  0003_label_created.py
task_manager/labels/templates/labels/: label_confirm_delete.html  label_form.html  label_list.html
task_manager/statuses/: forms.py  models.py  tests.py  views.py
task_manager/statuses/migrations/: 0002_status_created.py
task_manager/statuses/templates/statuses/: status_confirm_delete.html  status_form.html  status_list.html
task_manager/tasks/: filters.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_created_at.py  0003_alter_task_author_alter_task_status.py  0004_alter_task_executor.py  0005_task_labels.py  0006_alter_task_description.py
task_manager/tasks/templates/tasks/: task_confirm_delete.html  task_detail.html  task_form.html  task_list.html
task_manager/templates/: base.html  home.html  index.html
task_manager/templates/registration/: login.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py
users/: tests.py  views.py
users/templates/users/: user_confirm_delete.html  user_form.html  user_list.html
(+3 files in other folders)
