[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2",
    "django-bootstrap5",
    "whitenoise",
    "gunicorn",
    "dj-database-url",
    "django-filter>=25.2",
    "python-dotenv",
    "rollbar>=1.0.0",
    "psycopg[binary]>=3.1.0",
    "ruff>=0.0.355"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]

[tool.ruff]
line-length = 80
target-version = "py310"

exclude = [
    "migrations",
    "venv",
    "__pycache__",
]